# EjercicioIA6

./: .envEJEMPLO  README.md  main.py  pyproject.toml
